--- a/styles/resume.css
+++ b/styles/resume.css
@@ -48,3 +48,15 @@
 .hide {
     display: none;
 } */
+
+
+.triggerPreview {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+/* .triggerPreview :hover {
+    cur
+} */
