--- a/styles/site.css
+++ b/styles/site.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     font-size: 16px;
     font-family: "Poppings", sans-serif;
+    background-color: rgb(248, 248, 248);
 }
 
 header {
@@ -18,8 +19,9 @@ header {
     flex-direction: row;
     align-items: center;
     text-align: left;
-    background: hsla(0, 41%, 73%, 0.679);
+    /* background: hsla(0, 41%, 73%, 0.679); */
     /* background: hsla(176, 39%, 60%, 0.542); */
+    background: #39c5bc80;
     border-bottom: 1px solid gray;
     width: 100vw; 
     height: 80px;
@@ -27,7 +29,7 @@ header {
 
 header * {
     margin-left: 30px;
-    color: rgb(45, 40, 77);
+    color: rgb(39, 68, 87);
 }
 
 button {
